@@ -71,6 +71,7 @@
 			<li>negativeBrackets <span class="negativeBrackets">(123)</span></li>
 			<li>positiveFormat <span class="positiveFormat">123</span></li>
 			<li>negativeFormat <span class="negativeFormat">-123</span></li>
+			<li>negativeFormat of decimal <span class="negativeFormatDecimal">-0.25</span></li>
 			<li>issue2_doNotRound <span class="issue2_doNotRound">9.45</span></li>
 			<li>issue6_doNotRound <span class="issue6_doNotRound">154.20</span></li>
 			<li>decimalSymbol <span class="decimalSymbol">123</span></li>
@@ -94,6 +95,7 @@
 			<li>region fallback <span class="regionFallback">1000</span></li>
 			<li>region full fallback <span class="regionFullFallback">1000</span></li>
 			<li>setting multiple destinations <span class="multiDest multiDest1">1000</span> - <span class="multiDest multiDest2">1000</span></li>
+			<li>issue #11 <span class="blankShouldBeBlank"></span></li>
 		</ol>
 		
 		<h5>default (English - US)</h5>
